manifest/svc-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: skhan-app-service
spec:
  type: LoadBalancer
  selector:
    app: skhan-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
